--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -3338,6 +3338,513 @@ function [densities, varargout] = solver(S, zlams, rhs, eps, zk, alpha, opts)
     varargout{3} = Q;
 end    
 %
+
+%-------------------------------------------------
+%
+%%
+%%   Helmholtz transmission routines
+%
+%
+%-------------------------------------------------
+
+@ +helm3d/+transmission/eval.m 
+function p = eval(S,densities,targinfo,eps,zks,rep_params,varargin)
+%
+%  helm3d.transmission.eval
+%    Evaluates the helmholtz combined layer potential at a collection 
+%    of targets either in the interior/exterior
+%
+%  Syntax
+%   pot = helm3d.transmission.eval(S,densities,targinfo,eps,zks,rep_params)
+%
+%  PDE:
+%      (\Delta + k0^2)u0 = 0   in the exterior
+%      (\Delta + k1^2)u1 = 0   in the interior
+%
+%      alpha0 u0 - alpha1 u1 = f 
+%      beta0 dudn0 - beta1 dudn1 = g
+%
+%  Integral representation
+%     pot0 = 1/beta0 (ik_{0} S_{k0} [\sigma] + D_{k0} [\rho]) (exterior representation)
+%     pot1 = 1/beta1 (ik_{1} S_{k1} [\sigma] + D_{k1} [\rho]) (interior representation)
+%
+%  S_{k}, D_{k}: helmholtz single and double layer potential
+%  
+%  densities(2,1:npts) for helm_comb, with densities(1,:) = rho, 
+%  and densities(2,:) = sigma
+%
+%  rep_params(1) = alpha0 
+%  rep_params(2) = beta0
+%  rep_params(3) = alpha1 
+%  rep_params(4) = beta1
+%
+%  Note: for targets on surface, only principal value part of the
+%    layer potential is returned
+%
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * densities: layer potential densities
+%    * targinfo: target info 
+%       targinfo.r = (3,nt) target locations
+%       targinfo.n = normal info
+%       targinfo.patch_id (nt,) patch id of target, = -1, if target
+%          is off-surface (optional)
+%       targinfo.uvs_targ (2,nt) local uv ccordinates of target on
+%          patch if on-surface (optional)
+%    * eps: precision requested
+%    * zks: wave numbers (k)
+%    * rep_params: [alpha0; beta0; alpha1; beta1] above 
+%
+% todo: add options
+
+
+
+% Extract arrays
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+
+    [targs] = extract_targ_array(targinfo);
+    [ndtarg,ntarg] = size(targs);
+    ntargp1 = ntarg+1;
+
+    if(isfield(targinfo,'patch_id') || isprop(targinfo,'patch_id'))
+      patch_id = targinfo.patch_id;
+    else
+      patch_id = zeros(ntarg,1);
+    end
+
+    if(isfield(targinfo,'uvs_targ') || isprop(targinfo,'uvs_targ'))
+      uvs_targ = targinfo.uvs_targ;
+    else
+      uvs_targ = zeros(2,ntarg);
+    end
+
+    if(length(patch_id)~=ntarg)
+      fprintf('Incorrect size of patch id in target info struct. Aborting! \n');
+    end
+
+    [n1,n2] = size(uvs_targ);
+    if(n1 ~=2 && n2 ~=ntarg)
+      fprintf('Incorrect size of uvs_targ array in targinfo struct. Aborting! \n');
+    end
+
+
+    p = complex(zeros(ntarg,1));
+
+    ndz = 6;
+    zpars = complex(zeros(6,1));
+    zpars(1) = zks(1);
+    zpars(2) = rep_params(1);
+    zpars(3) = rep_params(2);
+    zpars(4) = zks(2);
+    zpars(5) = rep_params(3);
+    zpars(6) = rep_params(4);
+    ndim_s = 2;
+% Call the layer potential evaluator
+    # FORTRAN helm_comb_trans_eval(int[1] npatches, int[npatches] norders, int[npatp1] ixyzs, int[npatches] iptype, int[1] npts, double[n9,npts] srccoefs, double[n12,npts] srcvals, int[1] ndtarg, int[1] ntarg, double[ndtarg,ntarg] targs, int[ntarg] patch_id, double[2,ntarg] uvs_targ, double[1] eps, dcomplex[6] zpars, dcomplex[2,npts] densities, inout dcomplex[ntarg] p); 
+end    
+%
+%
+%
+%----------------------------------
+%
+@ +helm3d/+transmission/get_quadrature_correction.m 
+function Q = get_quadrature_correction(S, eps, zks, rep_params, targinfo, opts)
+%
+%  helm3d.transmission.get_quadrature_correction
+%    This subroutine returns the near quadrature correction
+%    for the combined field representation with density supported
+%    on the surface S, and targets given by targinfo 
+%    as a sparse matrix/rsc format 
+%
+%  Syntax
+%   Q = helm3d.transmission.get_quadrature_correction(S,eps,zks,rep_params)
+%   Q = helm3d.transmission.get_quadrature_correction(S,eps,zks,rep_params,targinfo)
+%   Q = helm3d.transmission.get_quadrature_correction(S,eps,zks,rep_params,targinfo,opts)
+%
+%  Note: currently only 'trans-bc' near quadrature corrections are supported, 
+%  so targinfo is a redundant variable
+%  
+%  PDE:
+%      (\Delta + k0^2)u0 = 0   in the exterior
+%      (\Delta + k1^2)u1 = 0   in the interior
+%
+%      alpha0 u0 - alpha1 u1 = f 
+%      beta0 dudn0 - beta1 dudn1 = g
+%
+%  Integral representation
+%     pot0 = 1/beta0 (ik_{0} S_{k0} [\sigma] + D_{k0} [\rho]) (exterior representation)
+%     pot1 = 1/beta1 (ik_{1} S_{k1} [\sigma] + D_{k1} [\rho]) (interior representation)
+%
+%  S_{k}, D_{k}: helmholtz single and double layer potential
+%  
+%  Note: for targets on surface, only principal value part of the
+%    layer potential is returned
+%
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * eps: precision requested
+%    * zks: wave numbers, must be of size(2,1) or (1,2)
+%    * rep_params: [alpha0; beta0; alpha1; beta1] above 
+%    * targinfo: target info (optional and unused)
+%       targinfo.r = (3,nt) target locations
+%       targinfo.du = u tangential derivative info
+%       targinfo.dv = v tangential derivative info
+%       targinfo.n = normal info
+%       targinfo.patch_id (nt,) patch id of target, = -1, if target
+%          is off-surface (optional)
+%       targinfo.uvs_targ (2,nt) local uv ccordinates of target on
+%          patch if on-surface (optional)
+%    * opts: options struct
+%        opts.format - Storage format for sparse matrices
+%           'rsc' - row sparse compressed format
+%           'csc' - column sparse compressed format
+%           'sparse' - sparse matrix format
+%        opts.quadtype - quadrature type, currently only 'ggq' supported
+%        opts.rep - whether to compute correction for on surface
+%                   integral equation or post-processing
+%                   'trans-bc' - on surface integral equation.
+%
+%  Todo: support 'trans-eval'
+% 
+%
+
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+    npp1 = npatches+1;
+    nsp1 = npts + 1;
+    n3 = 3;
+
+    if nargin < 4
+      targinfo = [];
+      targinfo.r = S.r;
+      targinfo.du = S.du;
+      targinfo.dv = S.dv;
+      targinfo.n = S.n;
+      targinfo.patch_id = S.patch_id;
+      targinfo.uvs_targ = S.uvs_targ;
+      opts = [];
+    end
+
+    qtype = 'trans-bc';
+
+    if nargin < 5
+      opts = [];
+    end
+
+    if isfield(opts, 'rep')
+      qtype = opts.rep;
+    end
+
+    ff = 'rsc';
+    if(isfield(opts,'format'))
+       ff = opts.format;
+    end
+
+    if(~(strcmpi(ff,'rsc') || strcmpi(ff,'csc') || strcmpi(ff,'sparse')))
+       fprintf('invalid quadrature format, reverting to rsc format\n');
+       ff = 'rsc';
+    end
+
+    tinfouse = [];
+    if strcmpi(qtype, 'trans-bc')
+      tinfouse.r = S.r;
+      tinfouse.du = S.du;
+      tinfouse.dv = S.dv;
+      tinfouse.n = S.n;
+      tinfouse.patch_id = S.patch_id;
+      tinfouse.uvs_targ = S.uvs_targ;
+    else
+      error('HEL3D.transmission.get_near_quadrature: unsupported quadrature correction type');
+    end
+
+
+    targs = extract_targ_array(tinfouse); 
+    [ndtarg,ntarg] = size(targs);
+    ntargp1 = ntarg+1;
+    
+    if(isfield(tinfouse,'patch_id') || isprop(tinfouse,'patch_id'))
+      patch_id = tinfouse.patch_id;
+    else
+      patch_id = zeros(ntarg,1);
+    end
+
+    if(isfield(tinfouse,'uvs_targ') || isprop(tinfouse,'uvs_targ'))
+      uvs_targ = tinfouse.uvs_targ;
+    else
+      uvs_targ = zeros(2,ntarg);
+    end
+
+    if(length(patch_id)~=ntarg)
+      fprintf('Incorrect size of patch id in target info struct. Aborting! \n');
+    end
+
+    [n1,n2] = size(uvs_targ);
+    if(n1 ~=2 && n2 ~=ntarg)
+      fprintf('Incorrect size of uvs_targ array in targinfo struct. Aborting! \n');
+    end
+
+
+    
+    iptype0 = iptype(1);
+    norder0 = norders(1);
+    rfac = 0.0;
+    rfac0 = 0.0;
+    # FORTRAN get_rfacs(int[1] norder0, int[1] iptype0, inout double[1] rfac, inout double[1] rfac0);
+    
+
+    cms = zeros(3,npatches);
+    rads = zeros(npatches,1);
+    # FORTRAN get_centroid_rads(int[1] npatches,int[npatches] norders,int[npp1] ixyzs,int[npatches] iptype,int[1] npts,double[n9,npts] srccoefs,inout double[n3,npatches] cms,inout double[npatches] rads);
+
+    rad_near = rads*rfac;
+    nnz = 0;
+    # FORTRAN findnearmem(double[n3,npatches] cms,int[1] npatches,double[npatches] rad_near,int[1] ndtarg,double [ndtarg,ntarg] targs,int[1] ntarg,inout int[1] nnz);
+
+    row_ptr = zeros(ntarg+1,1);
+    col_ind = zeros(nnz,1);
+    ntp1 = ntarg+1;
+    nnzp1 = nnz+1;
+    # FORTRAN findnear(double[n3,npatches] cms,int[1] npatches,double[npatches] rad_near,int[1] ndtarg,double [ndtarg,ntarg] targs, int[1] ntarg,inout int[ntp1] row_ptr,inout int[nnz] col_ind); 
+
+    iquad = zeros(nnz+1,1);
+    # FORTRAN get_iquad_rsc(int[1] npatches,int[npp1] ixyzs,int[1] npts,int[1] nnz,int[ntp1] row_ptr,int[nnz] col_ind,inout int[nnzp1] iquad);
+
+    nquad = iquad(nnz+1)-1;
+    iquadtype = 1;
+    if(isfield(opts,'quadtype'))
+      if(strcmpi(opts.quadtype,'ggq'))
+         iquadtype = 1;
+      else
+        fprintf('Unsupported quadrature type, reverting to ggq\n');
+        iquadtype = 1;
+      end
+    end
+
+    zpars = complex(zeros(6,1));
+    zpars(1) = zks(1);
+    zpars(2) = rep_params(1);
+    zpars(3) = rep_params(2);
+    zpars(4) = zks(2);
+    zpars(5) = rep_params(3);
+    zpars(6) = rep_params(4);
+    zkuse = max(real(zks));
+
+    nker = 4;
+    wnear = complex(zeros(nker,nquad));
+    # FORTRAN getnearquad_helm_comb_trans(int[1] npatches, int[npatches] norders, int[npp1] ixyzs, int[npatches] iptype, int[1] npts, double[n9,npts] srccoefs, double[n12,npts] srcvals, double[1] eps, dcomplex[6] zpars, int[1] iquadtype, int[1] nnz, int[ntp1] row_ptr, int[nnz] col_ind, int[nnzp1] iquad, double[1] rfac0,int[1] nquad, inout dcomplex[nker,nquad] wnear);
+    
+    Q = [];
+    Q.targinfo = targinfo;
+    Q.ifcomplex = 1;
+    
+    Q.wavenumber = zkuse;
+    Q.kernel_order = -1;
+    Q.rfac = rfac;
+    Q.nquad = nquad;
+    Q.format = ff;
+    Q.kernel_order = 0;
+
+    if(strcmpi(ff,'rsc'))
+        Q.iquad = iquad;
+        Q.wnear = wnear;
+        Q.row_ptr = row_ptr;
+        Q.col_ind = col_ind;
+    elseif(strcmpi(ff,'csc'))
+        col_ptr = zeros(npatches+1,1);
+        row_ind = zeros(nnz,1);
+        iper = zeros(nnz,1);
+        npatp1 = npatches+1;
+        # FORTRAN rsc_to_csc(int[1] npatches, int[1] ntarg, int[1] nnz, int[ntp1] row_ptr, int[nnz] col_ind, inout int[npatp1] col_ptr, inout int[nnz] row_ind, inout int[nnz] iper); 
+        Q.iquad = iquad;
+        Q.iper = iper;
+        Q.wnear = wnear;
+        Q.col_ptr = col_ptr;
+        Q.row_ind = row_ind;
+    else
+        spmat = conv_rsc_to_spmat(S,row_ptr,col_ind,wnear);
+        Q.spmat = spmat;
+    end
+    
+end
+%
+%
+%
+%
+%-------------------------------------------------
+
+@ +helm3d/+transmission/solver.m 
+function [densities, varargout] = solver(S, rhs, eps, zks, rep_params, opts)
+%
+%  helm3d.transmission.solver
+%    Solve the helmholtz transmission boundary value problem
+%      (\Delta + k0^2)u0 = 0   in the exterior
+%      (\Delta + k1^2)u1 = 0   in the interior
+%
+%      alpha0 u0 - alpha1 u1 = f 
+%      beta0 dudn0 - beta1 dudn1 = g
+%
+%  Syntax
+%   [densities] = helm3d.transmission.solver(S,rhs,eps,zks,rep_params)
+%   [densities] = helm3d.transmission.solver(S,rhs,eps,zks,rep_params,opts)
+%
+%  Integral representation
+%     pot0 = 1/beta0 (ik_{0} S_{k0} [\sigma] + D_{k0} [\rho]) (exterior representation)
+%     pot1 = 1/beta1 (ik_{1} S_{k1} [\sigma] + D_{k1} [\rho]) (interior representation)
+%
+%  S_{k}, D_{k}: helmholtz single and double layer potential
+%  
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * rhs(2,S.npts): boundary data, 
+%        the first component should be data for 
+%          alpha0 u0 - alpha1 u1 (f);
+%        the second component should be data for
+%          beta0 dudn0 - beta1 dudn1 (g);
+%    * eps: precision requested
+%    * zks: wave numbers, must be of size (2,1) 
+%    * rep_params: [alpha0; beta0; alpha1; beta1] above 
+%    * opts: options struct
+%        opts.nonsmoothonly - use smooth quadrature rule for evaluating
+%           layer potential (false)
+%        opts.eps_gmres - tolerance to which linear system is to be
+%           solved (eps_gmres = eps)
+%        opts.maxit - maximum number of gmres iterations (200)
+%        opts.quadrature_correction - precomputed quadrature correction ([])
+%        
+%
+%  Output arguemnts:
+%    * densities: solution to integral equation
+%         densities(1,:) = \rho 
+%         densities(2,:) = \sigma
+%    
+%
+    
+    if(nargin < 6) 
+      opts = [];
+    end
+
+    nonsmoothonly = false;
+    if(isfield(opts,'nonsmoothonly'))
+      nonsmoothonly = opts.nonsmoothonly;
+    end
+
+    eps_gmres = eps;
+    if(isfield(opts,'eps_gmres'))
+      eps_gmres = opts.eps_gmres;
+    end
+
+    maxit = 200;
+    if(isfield(opts,'maxit'))
+      maxit = opts.maxit;
+    end
+
+% Extract arrays
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+
+    targinfo = [];
+    targinfo.r = S.r;
+    targinfo.du = S.du;
+    targinfo.dv = S.dv;
+    targinfo.n = S.n;
+    patch_id  = zeros(npts,1);
+    uvs_targ = zeros(2,npts);
+    # FORTRAN get_patch_id_uvs(int[1] npatches, int[npatches] norders, int[npatp1] ixyzs, int[npatches] iptype, int[1] npts, inout int[npts] patch_id, inout double[2,npts] uvs_targ);
+    targinfo.patch_id = patch_id;
+    targinfo.uvs_targ = uvs_targ;
+
+    ff = 'rsc';
+
+    nptsp1 = npts+1;
+
+% Compute quadrature corrections    
+    if(~nonsmoothonly)
+
+      if isfield(opts, 'quadrature_correction')
+         Q = opts.quadrature_correction;
+      else
+        opts_quad = [];
+        opts_quad.format = 'rsc';
+        opts_quad.rep = 'trans-bc';
+%
+%  For now Q is going to be a struct with 'quad_format', 
+%  'nkernels', 'pde', 'bc', 'kernel', 'ker_order',
+%  and either, 'wnear', 'row_ind', 'col_ptr', or
+%  with 'spmat' as a sparse matrix or a cell array of wnear/spmat
+%  if nkernel is >1
+%
+
+        [Q] = helm3d.transmission.get_quadrature_correction(S,eps,zks,rep_params,targinfo,opts_quad);
+      end
+    else
+      opts_qcorr = [];
+      opts_qcorr.type = 'complex';
+      opts_qcorr.nker = 4;
+      Q = init_empty_quadrature_correction(targinfo,opts_qcorr);
+    end
+    nnz = length(Q.col_ind);
+    nquad = Q.iquad(end)-1;
+    nnzp1 = nnz+1; 
+
+    [novers] = get_oversampling_parameters(S,Q,eps);
+    Sover = oversample(S,novers);
+
+
+% Extract oversampled arrays
+
+    [srcover,~,~,ixyzso,~,wover] = extract_arrays(Sover);
+    nptso = Sover.npts; 
+
+% Extract quadrature arrays
+    row_ptr = Q.row_ptr;
+    col_ind = Q.col_ind;
+    iquad = Q.iquad;
+    wnear = Q.wnear;
+
+
+    densities = complex(zeros(2,npts));
+
+    rhs_use = rhs; 
+    z = -(1j*zks(1) + 1j*zks(2))/(rep_params(1)/rep_params(2) + rep_params(3)/rep_params(4));
+    rhs_use(1,:) = z*rhs(1,:);
+
+    niter = 0;
+    errs = zeros(maxit+1,1);
+    maxitp1 = maxit + 1;
+    rres = 0;
+    nker = 4;
+
+    zpars = complex(zeros(6,1));
+    zpars(1) = zks(1);
+    zpars(2) = rep_params(1);
+    zpars(3) = rep_params(2);
+    zpars(4) = zks(2);
+    zpars(5) = rep_params(3);
+    zpars(6) = rep_params(4);
+
+
+% Call the layer potential evaluator
+    # FORTRAN helm_comb_trans_solver_guru(int[1] npatches, int[npatches] norders, int[npatp1] ixyzs, int[npatches] iptype, int[1] npts, double[n9,npts] srccoefs, double[n12,npts] srcvals, double[1] eps, dcomplex[6] zpars, int[1] maxit, dcomplex[2,npts] rhs_use, int[1] nnz, int[nptsp1] row_ptr, int[nnz] col_ind, int[nnzp1] iquad, int[1] nquad, int[1] nker, dcomplex[nker,nquad] wnear, int[npatches] novers, int[1] nptso, int[npatp1] ixyzso, double[12,nptso] srcover, double[nptso] wover, double[1] eps_gmres, inout int[1] niter, inout double[maxitp1] errs, inout double[1] rres, inout dcomplex[2,npts] densities);
+    
+    errs = errs(1:niter);
+    varargout{1} = errs;
+    varargout{2} = rres;
+    varargout{3} = Q;
+end    
+%
+%
+
+%-------------------------------------------------
 %
 %-------------------------------------------------
 %
