--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -133,9 +133,7 @@ end
 %--------------------------------------------
 @ +geometries/ellipsoid.m
 function [S] = ellipsoid(abc, nabc, c0, norder, iptype)
-% GEOMETRIES.ELLIPSOID, get surface object for an ellipsoid
-% whose major axes are along the coordinate directions
-%
+% ELLIPSOID Create discretized axes-aligned ellipsoid surfer object.
 %
 %  Syntax
 %   S = geometries.ellipsoid(abc)
@@ -147,10 +145,10 @@ function [S] = ellipsoid(abc, nabc, c0, norder, iptype)
 %  Input arguments:
 %    * abc(3): semi-major axes in x,y, and z directions 
 %    * nabc(3): (optional, [2,2,2])
-%        number of pathes along the coordinate directions of the
+%        number of patches along the coordinate directions of the
 %        cube from which the ellipsoid is constructed
 %    * c0(3): (optional, [0,0,0])
-%        cetner of the ellipsoid
+%        center of the ellipsoid
 %    * norder: (optional, 4)
 %        order of discretization
 %    * iptype: (optional, 1)
@@ -206,7 +204,7 @@ end
 %-------------------------------------------------------------
 @ +geometries/sphere.m
 function [S] = sphere(a, na, c0, norder, iptype)
-% GEOMETRIES.SPHERE, get surface object for a sphere 
+% SPHERE Create a discretized sphere surfer object.
 %
 %  Syntax
 %   S = geometries.sphere(a)
@@ -218,10 +216,10 @@ function [S] = sphere(a, na, c0, norder, iptype)
 %  Input arguments:
 %    * a: radius of the sphere 
 %    * na: (optional, 2) 
-%        number of pathes along the coordinate directions of the
+%        number of patches along the coordinate directions of the
 %        cube from which the sphere is constructed
 %    * c0(3): (optional, [0,0,0])
-%        cetner of the sphere
+%        center of the sphere
 %    * norder: (optional, 4)
 %        order of discretization
 %    * iptype: (optional, 1)
@@ -262,7 +260,9 @@ end
 %--------------------------------------------
 @ +geometries/startorus.m
 function [S] = startorus(radii, nosc, scales, nuv, norder, iptype)
-% GEOMETRIES.startorus, get toroidal double fourier surface given by
+% STARTORUS Create discretized torus surfer deformed poloidal Fourier mode.
+%
+% Surface is parameterized by
 %
 % x(u,v) = \rho(u) \cos(v) scales(1)
 % y(u,v) = \rho(u) \sin(v) scales(2)
@@ -307,7 +307,6 @@ function [S] = startorus(radii, nosc, scales, nuv, norder, iptype)
 %        * iptype = 12, quadrangular patch discretized using tensor
 %                       product Chebyshev 
 %
-
   if nargin < 2
      nosc = 0;
   end
@@ -333,18 +332,18 @@ function [S] = startorus(radii, nosc, scales, nuv, norder, iptype)
 
   coefs(1,1,1) = radii(1);
   coefs(2,1,1) = radii(2);
-  coefs(1+nosc,1,1) = radii(3)/2;
-  coefs(1+abs(nosc-1),1,1) = radii(3)/2;
+  coefs(2+nosc,1,1) = coefs(2+nosc,1,1) + radii(3)/2;
+  coefs(1+abs(nosc-1),1,1) = coefs(1+abs(nosc-1),1,1) + radii(3)/2;
 
   coefs(m+2,1,3) = radii(2);
-  coefs(2*m+1,1,3) = radii(3)/2;
+  coefs(2*m+1,1,3) = coefs(2*m+1,1,3) + radii(3)/2;
 
   if nosc-1 > 0
-    coefs(m+1+nosc-1,1,3) = -radii(3)/2;
+    coefs(m+1+nosc-1,1,3) = coefs(m+1+nosc-1,1,3) - radii(3)/2;
   end
 
   if nosc-1 < 0
-    coefs(m+1+abs(nosc-1),1,3) = radii(3)/2;
+    coefs(m+1+abs(nosc-1),1,3) = coefs(m+1+abs(nosc-1),1,3) + radii(3)/2;
   end
 
   iort = 1;
