--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -141,6 +141,7 @@ function [S] = ellipsoid(abc, nabc, c0, norder, iptype)
 %   S = geometries.ellipsoid(abc, nabc, c0)
 %   S = geometries.ellipsoid(abc, nabc, c0, norder)
 %   S = geometries.ellipsoid(abc, nabc, c0, norder, iptype)
+%   If arguments nabc, c0, norder, and/or iptype are empty, defaults are used 
 %
 %  Input arguments:
 %    * abc(3): semi-major axes in x,y, and z directions 
@@ -159,20 +160,22 @@ function [S] = ellipsoid(abc, nabc, c0, norder, iptype)
 %                       product Gauss-Legendre nodes
 %        * iptype = 12, quadrangular patch discretized using tensor
 %                       product Chebyshev 
+% Example
+%   S = geometries.ellipsoid([1.5,1,0.5], [5 3 2], [], 8, 11)
 %
-  if nargin < 2
+  if nargin < 2 || isempty(nabc)
     nabc = [2; 2; 2];
   end
 
-  if nargin < 3
+  if nargin < 3 || isempty(c0)
     c0 = [0; 0; 0];
   end
 
-  if nargin < 4
+  if nargin < 4 || isempty(norder)
     norder = 4;
   end
 
-  if nargin < 5
+  if nargin < 5 || isempty(iptype)
     iptype = 1;
   end
 
@@ -212,6 +215,7 @@ function [S] = sphere(a, na, c0, norder, iptype)
 %   S = geometries.sphere(a, na, c0)
 %   S = geometries.sphere(a, na, c0, norder)
 %   S = geometries.sphere(a, na, c0, norder, iptype)
+%   If arguments na, c0, norder, and/or iptype are empty, defaults are used 
 %
 %  Input arguments:
 %    * a: radius of the sphere 
@@ -230,20 +234,22 @@ function [S] = sphere(a, na, c0, norder, iptype)
 %                       product Gauss-Legendre nodes
 %        * iptype = 12, quadrangular patch discretized using tensor
 %                       product Chebyshev 
+% Example
+%  S = geometries.sphere(1.0, [], [], 10, 11)  % unit sphere, big 10th-ord GL-quad patches
 %
-  if nargin < 2
+  if nargin < 2 || isempty(na)
     na = 2;
   end
 
-  if nargin < 3
+  if nargin < 3 || isempty(c0)
     c0 = [0; 0; 0];
   end
 
-  if nargin < 4
+  if nargin < 4 || isempty(norder)
     norder = 4;
   end
 
-  if nargin < 5
+  if nargin < 5 || isempty(iptype)
     iptype = 1;
   end
 
@@ -282,6 +288,7 @@ function [S] = startorus(radii, nosc, scales, nuv, norder, iptype)
 %   S = geometries.startorus(radii, nosc, scales, nuv)
 %   S = geometries.startorus(radii, nosc, scales, nuv, norder)
 %   S = geometries.startorus(radii, nosc, scales, nuv, norder, iptype)
+%   If arguments nosc, scales, nuv, norder, and/or iptype are empty, defaults are used 
 %
 %  Input arguments:
 %    * radii(3): radii of star shaped torus
@@ -306,24 +313,29 @@ function [S] = startorus(radii, nosc, scales, nuv, norder, iptype)
 %                       product Gauss-Legendre nodes
 %        * iptype = 12, quadrangular patch discretized using tensor
 %                       product Chebyshev 
+% Example
+%   % create 8th-order GL-quad patch with 5-pointed star cross-section:
+%   S = geometries.startorus([1,0.5,0.05], 5, [], [], 8, 11)
 %
-  if nargin < 2
+% Note: rwave small seems to generate very large negative curvatures
+%
+  if nargin < 2 || isempty(nosc)
      nosc = 0;
   end
 
-  if nargin < 3
+  if nargin < 3 || isempty(scales)
     scales = [1;1;1];
   end
 
-  if nargin < 4
+  if nargin < 4 || isempty(nuv)
     nuv = [5;5];
   end
 
-  if nargin < 5
+  if nargin < 5 || isempty(norder)
     norder = 4;
   end
 
-  if nargin < 6
+  if nargin < 6 || isempty(iptype)
     iptype = 1;
   end
 
@@ -392,6 +404,7 @@ function [S] = stellarator(nuv, norder, iptype)
 %   S = geometries.stellarator(nuv)
 %   S = geometries.stellarator(nuv, norder)
 %   S = geometries.stellarator(nuv, norder, iptype)
+%   If arguments norder, and/or iptype are empty, defaults are used 
 %
 %  Input arguments:
 %    * nuv(2): integer (optional, [5,15])
@@ -410,15 +423,15 @@ function [S] = stellarator(nuv, norder, iptype)
 %                       product Chebyshev 
 %
 
-  if nargin < 1
+  if nargin < 1 || isempty(nuv)
     nuv = [5;15];
   end
 
-  if nargin < 2
+  if nargin < 2 || isempty(norder)
     norder = 4;
   end
 
-  if nargin < 3
+  if nargin < 3 || isempty(iptype)
     iptype = 1;
   end
 
@@ -479,6 +492,7 @@ function [S] = xyz_tensor_fourier(coefs, scales, iort, nuv, norder, iptype)
 %   S = geometries.xyz_tensor_fourier(coefs, scales, iort, nuv)
 %   S = geometries.xyz_tensor_fourier(coefs, scales, iort, nuv, norder)
 %   S = geometries.xyz_tensor_fourier(coefs, scales, iort, nuv, norder, iptype)
+%   If arguments scales, iort, nuv, norder, and/or iptype are empty, defaults are used 
 %
 %  Input arguments:
 %    * coefs(2*m+1, 2*m+1, 3): Fourier coefs
@@ -507,23 +521,23 @@ function [S] = xyz_tensor_fourier(coefs, scales, iort, nuv, norder, iptype)
 %                       product Chebyshev 
 %
 
-  if nargin < 2
+  if nargin < 2 || isempty(scales)
     scales = [1;1;1];
   end
-
-  if nargin < 3
+ 
+  if nargin < 3 || isempty(iort)
     iort = 1; 
   end
 
-  if nargin < 4
+  if nargin < 4 || isempty(nuv)
     nuv = [5;5];
   end
 
-  if nargin < 5
+  if nargin < 5 || isempty(norder)
     norder = 4;
   end
 
-  if nargin < 6
+  if nargin < 6 || isempty(iptype)
     iptype = 1;
   end
 
